--- a/notion/weather.html
+++ b/notion/weather.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <a class="weatherwidget-io" href="https://forecast7.com/en/31d2029d92/alexandria/" data-label_1="ALEXANDRIA" data-label_2="WEATHER" data-days="3" data-theme="gray" >ALEXANDRIA WEATHER</a>
+    <a class="weatherwidget-io" href="https://forecast7.com/en/n33d87151d21/sydney/" data-label_1="Sydney" data-label_2="Weather" data-days="5" data-theme="white" >Sydney Weather</a>
     <script>
     !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
     </script>
