--- a/notion/greetings.html
+++ b/notion/greetings.html
@@ -25,8 +25,8 @@ h1 {
 
 .full-table {
     display: table;
-    height: 100%;
-    width: 100%;
+    height: 80%;
+    width: 80%;
 }
 
 .table-cell {
@@ -38,7 +38,7 @@ h1 {
       /* padding: 10px 25px 10px 25px;
       box-shadow: 2px 2px 1px 0px #295C7B; */
 .card {
-    padding: 25px;
+    padding: 10px 25px 10px 25px;
     border-radius: 10px;
     background: #009688;
     color: #fff;
